2008-03-10  dhruva  <dhruvakm@gmail.com>  (tiny change)

	* sound.c (alsa_configure): Declare vol at beginning of block.

	* fontset.c (Ffontset_info): Remove extra semicolon.

2008-03-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (Fsubstitute_in_file_name): Fix up computation of maximum
	size of resulting string.

2008-03-10  Jason Rumney  <jasonr@gnu.org>

	* dispnew.c (adjust_glyph_matrix): Initialize window_height.

2008-03-10  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (handle_single_display_spec): Undo 2007-10-16 changes.
	Don't pretend as if characters with display property haven't been
	consumed for string-replacing-string case.

2008-03-08  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (GET_NEXT_DISPLAY_ELEMENT): New macro.
	(get_next_display_element, next_element_from_string)
	(next_element_from_ellipsis, next_element_from_buffer): Use it.

2008-03-08  Andreas Schwab  <schwab@suse.de>

	* process.h (struct Lisp_Process): Declare bit fields as unsigned.

2008-03-06  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32_registry): Take font_type argument.  Use ANSI
	when charset not specified.  Only translate ANSI to unicode when
	font_type is truetype.
	(w32font_coverage_ok): New function.
	(add_font_entity_to_list): Use it to filter unsuitable fonts.

2008-03-04  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in: Always include w32font.c in the build.
	* w32font.c: Wrap in USE_FONT_BACKEND conditional.

2008-03-04  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (clean): Remove emacs-*.*.* instead of emacs-*.
	(versionclean): Likewise.

2008-03-04  Juanma Barranquero  <lekktu@gmail.com>

	* .cvsignore: Add oo.

2008-03-03  Andreas Schwab  <schwab@suse.de>

	* coding.c (decode_coding_object): Inhibit gap shrinking while
	decoding in place.

2008-03-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* w32term.c: Remove unused include "gnu.h".
	* makefile.w32-in (w32term.o): Don't depend on gnu.h.

	* gnu.h: Rename to ...